--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,7 +7,7 @@
 # review when someone opens a pull request.
 #*       @global-owner1 @global-owner2
 
-@global-owner1 @spacedestructor
+* @spacedestructor
 
 # Order is important; the last matching pattern takes the most
 # precedence. When someone opens a pull request that only
