--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ examples/civclicker/piety.png
 examples/civclicker/skins.png
 examples/civclicker/stone.png
 examples/civclicker/wood.png
+todo.txt
